fixing wildcard response